# TDdesktop-simplify

./: .gitignore  CMakeLists.txt  README.md  build.bat  deploy.bat
src/: CMakeLists.txt  main.cpp
src/core/: config_manager.cpp  config_manager.h  telegram_client.cpp  telegram_client.h
src/mtproto/: mtproto_client.cpp  mtproto_client.h
src/ui/: mainwindow.cpp  mainwindow.h
